name:                hsidentd
version:             0.1.0.0
synopsis:            Ident daemon replying with random hexadecimals
description:         Please see README.md
homepage:            https://github.com/githubuser/hsidentd#readme
license:             ISC
license-file:        LICENSE
author:              dxtr
maintainer:          kim _AT_ dxtr _DOT_ im
copyright:           2016 dxtr
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , network
                     , async
                     , pcre-light
                     , bytestring
                     , entropy
                     , hex
                     , unix
  default-language:    Haskell2010

executable hsidentd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsidentd
  default-language:    Haskell2010

test-suite hsidentd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsidentd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsidentd
